--- a/app.css
+++ b/app.css
@@ -9,12 +9,7 @@ background-repeat: no-repeat;
 background-size: cover;
 }
   
-  @media only screen and (max-width: 600px) {
-    body {
-      max-width: 100%;
-      max-height: 100%;
-    }
-  }
+ 
   
   .form {
     box-sizing: border-box;
@@ -108,16 +103,20 @@ background-size: cover;
   
     border: 0;
   }
-  @media screen and (max-width: 767px) { 
+  @media only screen and (max-width: 600px) {
+    body {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  
     .form {
-      width: 90%;
-      padding: 20px;
+      width: 100%;
+      padding: 30px 20px;
     }
   }
-  /*
+  /* /*
   Это медиазапрос в CSS, он определяет набор стилей CSS, которые будут применяться только при выполнении условий,
    указанных в запросе. В данном случае стили внутри фигурных скобок будут применяться только тогда, когда ширина области просмотра 
    (экрана) будет меньше или равна 767 пикселям. Стили внутри медиазапроса используются для настройки расположения элемента формы, 
    чтобы она лучше подходила для небольших экранов. В частности, он уменьшает ширину формы до 90% экрана и уменьшает отступ до 20px.
-  /*
-  
+  /* ну и костыль конеш */
