remove checkbox, add citystring

--- a/app.css
+++ b/app.css
@@ -31,7 +31,7 @@ background-size: cover;
     cursor: pointer;
   }
   
-  #ssid, #password {
+  #ssid, #password, #city {
     border:1px solid #e2e2e2;
     box-sizing: border-box;
     height: 50px;
@@ -39,7 +39,7 @@ background-size: cover;
    
   }
 
-  #ssid:hover, #password:hover {
+  #ssid:hover, #password:hover, #city:hover {
     cursor: text;
   }
   
@@ -114,9 +114,10 @@ background-size: cover;
       padding: 30px 20px;
     }
   }
-  /* /*
+  
+   /*
   Это медиазапрос в CSS, он определяет набор стилей CSS, которые будут применяться только при выполнении условий,
    указанных в запросе. В данном случае стили внутри фигурных скобок будут применяться только тогда, когда ширина области просмотра 
-   (экрана) будет меньше или равна 767 пикселям. Стили внутри медиазапроса используются для настройки расположения элемента формы, 
-   чтобы она лучше подходила для небольших экранов. В частности, он уменьшает ширину формы до 90% экрана и уменьшает отступ до 20px.
-  /* ну и костыль конеш */
+   (экрана) будет меньше или равна 600 пикселям. Стили внутри медиазапроса используются для настройки расположения элемента формы, 
+   чтобы она лучше подходила для небольших экранов. 
+ /*
